# SecureEraser

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
analytics/: CMakeLists.txt  sources.cmake
appcli/: CMakeLists.txt  sources.cmake
appcli/include/appcli/: command_line_parser.h
appcli/src/: command_line_parser.cpp  main.cpp
appcli/test/: CMakeLists.txt
appcli/test/functional_test/: functional_test.cpp
cmake/: coverage.cmake  dev-mode.cmake  download-file.cmake  get-win32-winnt.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  open-cpp-coverage.cmake.example  prelude.cmake  safe-directory.cmake  update-submodules.cmake  variables.cmake  windows-set-path.cmake
eraser_cli/: CMakeLists.txt  sources.cmake
eraser_cli/src/: command_line_parser.cpp  main.cpp
eraser_cli/test/functional/: CMakeLists.txt  functional_test.cpp
statistics/: CMakeLists.txt  sources.cmake
test/: CMakeLists.txt
